# CMiner

./: CMakeLists.txt  CMinerAuthorTest.cpp  CMinerHDFSTest.cpp  CMinerMyTest.cpp  CMinerSimulator.cpp  CMinerSimulator.h  CMinerSimulatorTest.cpp  NonPredictSimulator.cpp  NonPredictSimulator.h  NonPredictSimulatorTest.cpp  README.md  Simulator.cpp  Simulator.h
CMiner/: CMinerBase.cpp  CMinerBase.h  CMinerMy.h  FileAccessLog.cpp  FileAccessLog.h
LRUCache/: CMakeLists.txt  LRUCache.cpp  LRUCache.h
Miner/: CMakeLists.txt  CMinerAuthor.cpp  CMinerAuthor.h  CMinerBase.cpp  CMinerBase.h  CMinerHDFS.cpp  CMinerHDFS.h  CMinerMy.cpp  CMinerMy.h  FileAccessLog.cpp  FileAccessLog.h  HDFSRule.cpp  HDFSRule.h  HDFSSubseqSuffix.cpp  HDFSSubseqSuffix.h  Rule.cpp  Rule.h  SubseqnenceSuffix.cpp  SubseqnenceSuffix.h  test.cpp
Simulator/: CMinerSimulator.h  Simulator.cpp  Simulator.h
Utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/CMiner/: CMakeLists.txt  CMinerBase.cpp  CMinerBase.h  CMinerHDFS.cpp  CMinerHDFS.h  FileAccessLog.cpp  FileAccessLog.h  HDFSRule.cpp  HDFSRule.h  HDFSSubseqSuffix.cpp  HDFSSubseqSuffix.h  Rule.cpp  Rule.h
src/Simulator/: CMinerSimulator.h  Simulator.cpp  Simulator.h
src/Utils/: StringUtils.cpp  StringUtils.h
